# physical-world-monitoring

./: .env.example  .gitignore  README.md  ingest.py  pyproject.toml
cloud-functions/ingest-sensor-data/: main.py  requirements.txt
cloud-functions/movement-alert/: main.py  requirements.txt
