[project]
name = "physical-world-monitoring"
version = "0.1.0"
description = "Source code for demos presented at ElasticON NYC 2024"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "elasticsearch>=8.15.1,<9",
    "elasticsearch-async>=6.2.0",
    "pydantic>=2.9.2",
    "pydantic-settings>=2.6.1",
    "viam-sdk>=0.45.2",
    "functions-framework>=3.8.1",
]
